--- a/about.html
+++ b/about.html
@@ -12,66 +12,59 @@
 
 <body>
   <main>
-    <section class="content">
-      <h2 class="faq-heading">Длинное название: Просмотр подробной <br> информации о продукте</h2>
-      <p class="faq-content">Текст для примера. Деньгами стали не&nbsp;только наличность, но&nbsp;и&nbsp;долги банка
+    <section class="article">
+      <h2>Длинное название: Просмотр подробной <br> информации о продукте</h2>
+      <p>Текст для примера. Деньгами стали не&nbsp;только наличность, но&nbsp;и&nbsp;долги банка
         перед клиентами,
         как в&nbsp;форме учётных записей на&nbsp;счетах клиентов, так и&nbsp;в&nbsp;форме банковских
         расписок&nbsp;&mdash; банкнот</p>
-      <div class="content-block__image">
-        <img src="img/content-image1.png" alt="">
-      </div>
-      <span class="content-block__subtitle">Подзаголовок</span>
-      <p class="faq-content">Но высокотехнологичная концепция общественного уклада предполагает независимые способы
+      <img src="img/content-image1.png" alt="">
+      <h3>Подзаголовок</h3>
+      <p>Но&nbsp;высокотехнологичная концепция общественного уклада предполагает независимые способы
         реализации
-        поставленных обществом задач. В своём стремлении повысить качество жизни, они забывают, что убеждённость
-        некоторых оппонентов не даёт нам иного выбора, кроме определения позиций, занимаемых участниками в
+        поставленных обществом задач. В&nbsp;своём стремлении повысить качество жизни, они забывают, что убеждённость
+        некоторых оппонентов не&nbsp;даёт нам иного выбора, кроме определения позиций, занимаемых участниками в
         отношении поставленных задач.</p>
 
-      <p class="faq-content">С учётом сложившейся международной обстановки, внедрение современных методик требует
+      <p>С&nbsp;учётом сложившейся международной обстановки, внедрение современных методик требует
         определения и
-        уточнения прогресса профессионального сообщества. В своём стремлении улучшить пользовательский опыт мы
-        упускаем, что активно развивающиеся страны третьего мира объединены в целые кластеры себе подобных.</p>
+        уточнения прогресса профессионального сообщества. В&nbsp;своём стремлении улучшить пользовательский опыт мы
+        упускаем, что активно развивающиеся страны третьего мира объединены в&nbsp;целые кластеры себе подобных.</p>
 
-      <p class="faq-content text40">Предварительные выводы неутешительны: семантический разбор внешних противодействий,
+      <p>Предварительные выводы неутешительны: семантический разбор внешних противодействий,
         также
         свежий взгляд
         на
-        привычные вещи - безусловно открывает новые горизонты для приоритизации разума над эмоциями! А ещё
-        ключевые особенности структуры проекта призывают нас к новым свершениям, которые, в свою очередь, должны
-        быть представлены в исключительно положительном свете. Активно развивающиеся страны третьего мира
-        функционально разнесены на независимые элементы. Банальные, но неопровержимые выводы, а также некоторые
-        особенности внутренней политики являются только методом политического участия и ограничены исключительно
+        привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для приоритизации разума над эмоциями!
+        А&nbsp;ещё
+        ключевые особенности структуры проекта призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь,
+        должны
+        быть представлены в&nbsp;исключительно положительном свете. Активно развивающиеся страны третьего мира
+        функционально разнесены на&nbsp;независимые элементы. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также
+        некоторые
+        особенности внутренней политики являются только методом политического участия и&nbsp;ограничены исключительно
         образом мышления.</p>
-      <a href="#" class="link">
-        <div class="content-block__document">
-          <div class="content-block__icon">
-            <img src="img/content-image2.svg" alt="">
-          </div>
-          <span>Название документа для скачивания</span>
-        </div>
+      <a href="#" download="">
+        <img src="img/content-image2.svg" alt="">
+        <span>Название документа для скачивания</span>
       </a>
-      <div class="content-block__images">
-        <div class="content-block__pic">
-          <img src="img/content-image3.png" alt="">
-        </div>
-        <div class="content-block__pic">
-          <img src="img/content-image4.png" alt="">
-        </div>
+      <div class="img">
+        <img src="img/content-image3.png" class="w-50" alt="">
+        <img src="img/content-image4.png" class="w-50" alt="">
       </div>
-        <p class="faq-content">Текст для примера. Деньгами стали не только наличность, но и долги банка перед
-          клиентами,
-          как в форме
-          учётных записей на счетах клиентов, так и в форме банковских расписок — банкнот</p>
-        <div class="content-block__text">
-        <a href="#" class="button">Переход на страницу продукта. ответа</a>
-      </div>
-      <div class="faq-useful-section">
-        <h2 class="faq-useful-section-heading">Был ли ответ полезен?</h2>
-        <button class="faq-useful-section-button-yes">Да</button>
-        <button class="faq-useful-section-button-no">Нет</button>
+      <p>Текст для примера. Деньгами стали не&nbsp;только наличность, но&nbsp;и&nbsp;долги банка перед
+        клиентами,
+        как в&nbsp;форме
+        учётных записей на&nbsp;счетах клиентов, так и&nbsp;в&nbsp;форме банковских расписок&nbsp;&mdash; банкнот</p>
+      <div>
+        <button href="#" class="button">Переход на страницу продукта. ответа</button>
       </div>
     </section>
+    <div class="faq-useful-section">
+      <h2 class="faq-useful-section-heading">Был ли ответ полезен?</h2>
+      <button class="faq-useful-section-button-yes">Да</button>
+      <button class="faq-useful-section-button-no">Нет</button>
+    </div>
     <section class="faq-other-section">
       <div class="actual-block">
         <h2 class="faq-other-section-heading">Другие вопросы по данной теме</h2>
